import React from 'react'
import { shallow } from 'enzyme'
import { ExpensesSummary } from '../../components/expensesSummary'

test('should expenses-total render with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235} />)
    expect(wrapper).toMatchSnapshot()
})

test('should expenses-total render wih mutliple value', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={23} expensesTotal={5480} />)
    expect(wrapper).toMatchSnapshot()
})