// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expenses-total render wih mutliple value 1`] = `
<div>
  <h2>
    viewing 
    23
     
    expenses
     totalling 
    $54.80
  </h2>
</div>
`;

exports[`should expenses-total render with 1 expense 1`] = `
<div>
  <h2>
    viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;
